apps/base/dev-argo-cd/deploy/argocd-server-ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Dev
    gethomepage.dev/name: Argo CD
    gethomepage.dev/description: Declarative, GitOps continuous delivery tool for Kubernetes
    gethomepage.dev/icon: argo-cd
    gethomepage.dev/pod-selector: "app.kubernetes.io/part-of=argocd"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - argo-cd.dev.intra.web_domain_name
      secretName: opensslpki-ingress-tls
  rules:
  - host: argo-cd.dev.intra.web_domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
